@@ -280,11 +280,12 @@ directory)
 2. Link them together into an appropriately-named shared library for
 your operating system
 
-3. Copy the resulting shared library into <tt>URI_PATH</tt> with the
-correct name and location, and
+3. Copy the resulting shared library into
+<tt><build_dir>/LIB_PATH</tt> with the correct name and location, and
 
 4. Create an <tt>INSTALL</tt> rule so that the shared library will be
-installed correctly along with your project.
+installed correctly along with your project. It will be automatically
+installed into Zorba's default non-core library path (see \libpath).
 
 If your code depends on other dynamic libraries, you can pass the full
 paths to those libraries to <tt>DECLARE_ZORBA_MODULE()</tt> using the
