@@ -3,7 +3,7 @@
 Once you have created a module project (see \ref modules_authoring)
 containing modules and schemas, there are two different ways that you
 can build those modules directly into Zorba, such that they are on
-Zorba's default module path and will be found automatically.
+Zorba's default URI and Library paths and will be found automatically.
 
 These same techniques can be used with non-core modules developed by
 the Zorba team.
