@@ -54,6 +54,8 @@ version 2.x
   * Fixed bug #872796  (validate-in-place can interfere with other update primitives)
   * Fixed bug #872799 (validate-in-place can set incorrect types)
   * Fixed bug #855715 (Invalid escaped characters in regex not caught)
+  * Fixed bug #862089 (Split binary/xq install directories for modules) by
+	splitting "module path" into separate URI and Library paths
 
 version 2.0.1
 
